@@ -1,6 +1,6 @@
-control_deps := $(addprefix debian/control.in/, libc6 libc6.1 libc0.3 sparc64 opt)
+control_deps := $(addprefix debian/control.in/, libc6 libc6.1 libc0.3 libc1 sparc64 opt)
 
-threads_archs := alpha arm i386 m68k mips mipsel powerpc sparc ia64 hppa s390 sh3 sh4 sh3eb sh4eb
+threads_archs := alpha arm i386 m68k mips mipsel powerpc sparc ia64 hppa s390 sh3 sh4 sh3eb sh4eb freebsd-i386
 
 debian/control.in/libc6: debian/control.in/libc debian/rules.d/control.mk
 	sed -e 's%@libc@%libc6%g' \
@@ -12,6 +12,9 @@ debian/control.in/libc6.1: debian/control.in/libc debian/rules.d/control.mk
 debian/control.in/libc0.3: debian/control.in/libc debian/rules.d/control.mk
 	sed -e 's%@libc@%libc0.3%g;s%@archs@%hurd-i386%g;s/nscd, //' < $< > $@
 
+debian/control.in/libc1: debian/control.in/libc debian/rules.d/control.mk
+	sed -e 's%@libc@%libc1%g;s%@archs@%freebsd-i386%g' < $< > $@
+
 debian/control: debian/control.in/main $(DEB_HOST_GNU_TYPE) $(control_deps) \
 		   debian/sysdeps/soname.mk debian/sysdeps/config.mk \
 		   debian/rules.d/control.mk debian/sysdeps/depflags.pl
@@ -19,6 +22,7 @@ debian/control: debian/control.in/main $(DEB_HOST_GNU_TYPE) $(control_deps) \
 	cat debian/control.in/libc6		>> $@T
 	cat debian/control.in/libc6.1		>> $@T
 	cat debian/control.in/libc0.3		>> $@T
+	cat debian/control.in/libc1		>> $@T
 	cat debian/control.in/sparc64		>> $@T
 	cat debian/control.in/opt		>> $@T
 	sed -e 's%@libc@%$(libc)%g;s%@glibc@%$(glibc)%g' \
