@@ -1,0 +1,5 @@
+threads = yes
+config-os = freebsd-gnu
+add-ons = linuxthreads
+NO_TEST = yes
+extra_config_options := --disable-compatible-utmp --enable-kernel-include=4.6
