@@ -17,6 +17,12 @@ glibc (2.3-1) unstable; urgency=low
     - debian/rules: Don't put CFLAGS in configparms, resolves ldconfig
       miscompile on i386
 
+    - debian/rules: Add freebsd-i386 support
+    - debian/rules.d/control.mk: Add freebsd-i386 support
+    - debian/sysdeps/freebsd.mk: New file to add freebsd-i386 support
+    - debian/sysdeps/paths.mk: Add freebsd-i386 support
+    - debian/sysdeps/soname.mk: Add freebsd-i386 support
+
   * XXX Below here was during the 2.2.94 development, and never released.
 
   * Jeff Bailey <jbailey@nisa.net>
